--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,7 @@
 <!doctype html>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,900;1,900&display=swap" rel="stylesheet">
 <html lang="en">
 <head>
   <meta charset="utf-8">
